# PitStop

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json
data/: qualifying.db
scripts/: start_model.py  store_quali.py  test_loader.py
src/: __init__.py  data_loader.py
src/data/: __init__.py  fetch_quali.py
src/db/: __init__.py  engine.py  tables.py
src/model/: q3_prediction.py
