[project]
name = "pitstop"
version = "0.1.0"
description = ""
authors = [
    {name = "KartikAg13",email = "23803013@mail.jiit.ac.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "fastf1 (>=3.5.3,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
